<resources>
    <string name="app_name">Local Wallet</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="search">Search</string>
    <string name="markups_hint">Add Markups</string>
    <string name="location_hint">Add Location</string>
    <string name="price_hint">Add Price</string>
    <string name="save">Save</string>
    <string name="date_hint">Add Date</string>
    <string name="add_income">Your Income Successfully Added</string>
    <string name="add_expense">Your Expense Successfully Added :)</string>
    <string name="search_by_date">Search by Date</string>
    <string name="search_by_location">Search by Location</string>
    <string name="search_by_markups">Search by Markups</string>
    <string name="searchBn">Search</string>
    <string name="required">Required</string>
    <string name="expense_sum">The Summary of Expenses are </string>
    <string name="income_sum">The Summary of Incomes are </string>
    <string name="money">AMD</string>
    <string name="languages">Change Language</string>
    <string name="about">About</string>
    <string name="hy">Armenian</string>
    <string name="en">English</string>
    <string name="result">Result</string>
    <string name="errorPrice">Please Price input less than 999.999.999 </string>

    <string-array name="properties">
        <item>Date</item>
        <item>Location</item>
        <item>Markups</item>
    </string-array>
</resources>
