<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_income_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/markups_icon"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            <EditText
                android:paddingLeft="5dp"
                android:id="@+id/income_markups"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/markups_hint"
                android:inputType="text"
                android:lines="3"
                android:minHeight="80dp"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/location_icon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="8"
                android:id="@+id/income_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/location_hint"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:lines="1"
                android:minHeight="50dp"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/price_icon"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="8"
                android:paddingLeft="5dp"
                android:id="@+id/income_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/price_hint"
                android:inputType="number"
                android:lines="1"
                android:minHeight="50dp"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/date_icon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="8"
                android:paddingLeft="5dp"
                android:id="@+id/income_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:focusable="false"
                android:gravity="top"
                android:hint="@string/date_hint"
                android:lines="1"
                android:minHeight="50dp"
                android:textSize="25sp" />
        </LinearLayout>

            <Button
                android:id="@+id/save_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_shape"
                android:text="@string/save" />
        </LinearLayout>


    </ScrollView>



</RelativeLayout>